[gd_scene load_steps=8 format=2]

[ext_resource path="res://Assets/Scripts/MenuCam.gd" type="Script" id=1]
[ext_resource path="res://Assets/particles/catSkull.png" type="Texture" id=2]
[ext_resource path="res://Assets/Fonts/hypik_small.tres" type="DynamicFont" id=3]
[ext_resource path="res://Assets/Fonts/hypik.tres" type="DynamicFont" id=4]
[ext_resource path="res://DeathSence.gd" type="Script" id=5]

[sub_resource type="Shader" id=1]
code = "/*
	動的電子背景シェーダー by あるる（きのもと 結衣） @arlez80
	Procedural Electric Background Shader by Yui Kinomoto @arlez80

	MIT License
*/
shader_type canvas_item;

uniform vec4 background_color : hint_color = vec4( 0.0, 0.0, 0.0, 1.0 );
uniform vec4 line_color : hint_color = vec4( 0.0, 1.0, 1.0, 1.0 );
uniform float line_freq = 9.56;
uniform float height = 0.6;
uniform float speed = 0.8;
uniform vec2 scale = vec2( 2.0, 16.0 );

void fragment( )
{
	vec2 uv = UV * scale;
	float shift = cos( floor( uv.y ) );
	uv.x += shift;

	float freq = clamp( cos( uv.x * line_freq ) * 3.0, 0.0, 1.0 ) * height;
	float line = 1.0 - clamp( abs( freq - mod( uv.y, 1.0 ) ) * 11.0, 0.0, 1.0 );

	COLOR = mix( background_color, line_color, line * mod( uv.x - TIME * speed * abs( shift ), 1.0 ) /*  * mod( TIME + shift, 1.0 ) */ );
}"

[sub_resource type="ShaderMaterial" id=2]
shader = SubResource( 1 )
shader_param/background_color = Color( 0, 0, 0, 0 )
shader_param/line_color = Color( 0.933333, 0, 1, 1 )
shader_param/line_freq = 9.56
shader_param/height = 0.6
shader_param/speed = 0.2
shader_param/scale = Vector2( 2, 16 )

[node name="Control" type="Control"]
anchor_right = 1.0
anchor_bottom = 1.0
script = ExtResource( 5 )

[node name="Camera" type="Camera" parent="."]
transform = Transform( -1, 0, -8.74228e-08, 0, 1, 0, 8.74228e-08, 0, -1, 0, 0, 0 )
script = ExtResource( 1 )

[node name="Control2" type="Control" parent="."]
margin_right = 40.0
margin_bottom = 40.0
rect_scale = Vector2( 0.5, 0.5 )

[node name="ColorRect" type="ColorRect" parent="Control2"]
material = SubResource( 2 )
margin_left = -150.0
margin_top = 2.0
margin_right = 801.0
margin_bottom = 511.0
color = Color( 0.976471, 0.113725, 0.619608, 0.654902 )

[node name="Control" type="Control" parent="Control2"]
margin_left = 96.0
margin_top = 54.0
margin_right = 161.0
margin_bottom = 123.0
__meta__ = {
"_edit_group_": true
}

[node name="Label" type="Label" parent="Control2/Control"]
margin_left = -16.0
margin_top = -54.0
margin_right = 669.0
margin_bottom = 331.0
rect_rotation = 0.547201
rect_scale = Vector2( 0.7, 0.5 )
custom_fonts/font = ExtResource( 4 )
text = "You 
have 
been 
purrminated"
align = 1

[node name="Start_Button" type="Button" parent="Control2"]
self_modulate = Color( 1, 1, 1, 0 )
margin_left = -240.0
margin_top = 398.0
margin_right = 961.0
margin_bottom = 450.0
rect_rotation = 0.789839
rect_scale = Vector2( 0.8, 0.8 )
custom_fonts/font = ExtResource( 3 )
text = "Start"

[node name="startbox" type="ColorRect" parent="Control2/Start_Button"]
show_behind_parent = true
margin_left = 848.184
margin_top = -427.733
margin_right = 900.184
margin_bottom = 802.267
rect_rotation = 89.9999
rect_pivot_offset = Vector2( 25.7605, 454.162 )
mouse_filter = 1
color = Color( 0.933333, 0, 1, 1 )

[node name="Label" type="Label" parent="Control2/Start_Button"]
margin_left = 537.878
margin_top = 5.991
margin_right = 663.878
margin_bottom = 51.991
mouse_filter = 1
custom_fonts/font = ExtResource( 3 )
text = "MainMenu"

[node name="Quit_Button" type="Button" parent="Control2"]
self_modulate = Color( 1, 1, 1, 0 )
anchor_left = 0.102
anchor_top = 0.125
anchor_right = 0.117
anchor_bottom = 1.0
margin_left = -312.08
margin_top = 445.0
margin_right = 888.92
margin_bottom = 497.0
rect_rotation = 0.745527
rect_scale = Vector2( 0.8, 0.8 )
custom_fonts/font = ExtResource( 3 )
text = "Quit"

[node name="quitbox" type="ColorRect" parent="Control2/Quit_Button"]
show_behind_parent = true
anchor_left = 0.102
anchor_top = 0.125
anchor_right = 0.117
anchor_bottom = 1.0
margin_left = 721.716
margin_top = -428.391
margin_right = 773.716
margin_bottom = 801.609
rect_rotation = 89.9999
rect_pivot_offset = Vector2( 25.7605, 454.162 )
mouse_filter = 1
color = Color( 0.933333, 0, 1, 1 )

[node name="Label3" type="Label" parent="Control2/Quit_Button"]
anchor_left = 0.102
anchor_top = 0.125
anchor_right = 0.117
anchor_bottom = 1.0
margin_left = 550.435
margin_top = 2.62631
margin_right = 739.435
margin_bottom = 48.6263
mouse_filter = 1
custom_fonts/font = ExtResource( 3 )
text = "Quit"

[node name="TextureRect" type="TextureRect" parent="."]
margin_left = 100.0
margin_top = 88.0
margin_right = 200.0
margin_bottom = 188.0
rect_scale = Vector2( 1.2, 1.2 )
texture = ExtResource( 2 )

[connection signal="mouse_entered" from="Control2/Start_Button" to="." method="_on_Start_Button_mouse_entered"]
[connection signal="mouse_exited" from="Control2/Start_Button" to="." method="_on_Start_Button_mouse_exited"]
[connection signal="pressed" from="Control2/Start_Button" to="." method="_on_Start_Button_pressed"]
[connection signal="mouse_entered" from="Control2/Start_Button/startbox" to="." method="_on_startbox_mouse_entered"]
[connection signal="mouse_exited" from="Control2/Start_Button/startbox" to="." method="_on_startbox_mouse_exited"]
[connection signal="mouse_entered" from="Control2/Quit_Button" to="." method="_on_Quit_Button_mouse_entered"]
[connection signal="mouse_exited" from="Control2/Quit_Button" to="." method="_on_Quit_Button_mouse_exited"]
[connection signal="pressed" from="Control2/Quit_Button" to="." method="_on_Quit_Button_pressed"]
